-fix print sheet: we need to null the margin - empower the browser to wrap the function names with an invisible space (this   is needed to support firefox

--- a/styles/print.css
+++ b/styles/print.css
@@ -6,4 +6,5 @@
 
 #content {
   width: 100%;
+  margin: 0;
 }
